force-app/main/default/objects/Student__c/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guardian</label>
    <referenceTo>Guardian__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>