force-app/main/default/objects/Student__c/fields/Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact__c</fullName>
    <label>Guardian Contact</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>