force-app/main/default/objects/Student__c/fields/Total_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendance__c</fullName>
    <inlineHelpText>Stores the total attendance percentage for the student</inlineHelpText>
    <label>Total Attendance</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>