force-app/main/default/objects/Student__c/validationRules/Guardian_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Guardian_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Guardian__c)</errorConditionFormula>
    <errorDisplayField>Guardian__c</errorDisplayField>
    <errorMessage>Every student must be associated with a Guardian</errorMessage>
</ValidationRule>