force-app/main/default/objects/Student__c/validationRules/Validate_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Email_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Email__c)) &amp;&amp; 
NOT(CONTAINS(Email__c, &quot;@&quot;))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address.</errorMessage>
</ValidationRule>